Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6357

List item in keypad devices is not highlighted before navigating the list

    XMLWordPrintable

Details

    Description

      Steps:
      1. Launch desktopservices
      2. Note - none of the listbox items is highlighted (Shouldn't first be highlighted at least in keypad enabled devices?)
      3. Click once down -> second item gets highlighted. Shouldn't first item get the focus first?

      It seems that first item is actually highlighted since clicking select opens the image associated to first item, but highlight is just not drawn before navigating in list.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            e0101981 Janne Anttila
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes