List item is not highlighted before navigating the list

QS60Style does not draw highlight for a list that user has not navigated
in yet. Once user makes navigation attempt, highlight is drawn to
correct index.

This was due to that QS60Style only used State_Selected for deducing
where highlight should be drawn to.

Task-number: QTBUG-6357
Reviewed-by: Janne Anttila